--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.0.4",
     "@nestjs/typeorm": "^9.0.0",
     "@types/swagger-ui-express": "^4.1.3",
     "bcrypt": "^5.0.1",
@@ -41,7 +42,6 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "swagger": "^0.7.5",
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
